fix a few more